# OXT-cpp-implementation

./: README.md
OXT/: ._CmakeLists.txt  CmakeLists.txt  build_plaintext_database.sql
OXT/benchmark/: draw_pic.py  draw_pic_commu.py  test.py
OXT/include/OXT/: SSEClient.h  SSEServer.h  SSEService.h  Server_types.h
OXT/include/filter/: bloom.h  xorfilter.h  xorfilter_modi.h
OXT/include/utils/: CompressBF.h  Config.h  CryptoTools.h  GGMNode.h  PrefixPrf.h  SpookyV2.h  Tools.h
OXT/src/: CMakeLists.txt
OXT/src/OXT/: SSEClient.cpp  SSEServer.cpp  Server.thrift  client_oxt.cpp  server_oxt.cpp
OXT/src/OXT/gen-cpp/: SSEService.cpp  SSEService_server.skeleton.cpp
OXT/src/filter/: bloomfilter.cpp  xorfilter.cpp
OXT/src/utils/: CompressBF.cpp  CryptoTools.cpp  PrefixPrf.cpp  SpookyV2.cpp
OXT/test/: CMakeLists.txt  PrefixPRF_test.cpp  crypto_tools_test.cpp  elliptic_curve_test.cpp  filtertest.cpp  spookyV2_test.cpp
